# nanoTabPFN

./: pyproject.toml
autoregressive_nano_tabpfn/: INFERENCE_ENGINE_PLAN.md  __init__.py  attention.py  model.py  train.py  triton_kernels.py  visualize_masks.py
autoregressive_nano_tabpfn/configs/: train_tabular_online.yaml
autoregressive_nano_tabpfn/data/: __init__.py  data.py  mlp_scm.py  online_dataset.py  tabular_sampler.py
autoregressive_nano_tabpfn/model/: __init__.py  attention.py  inference.py  model.py  triton_kernels.py
autoregressive_nano_tabpfn/tests/: __init__.py  test_inference_vs_forward.py  test_pipeline.py  visualize_masks.py
